--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -23,7 +23,7 @@ jobs:
         with:
           node-version: 20
           cache: npm
-      - run: npm install          # keep this unless you commit package-lock.json
+      #- run: npm install          # keep this unless you commit package-lock.json
       - run: npm run build
       - uses: actions/upload-pages-artifact@v3
         with:
