--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -11,23 +11,26 @@ permissions:
   id-token: write
 
 concurrency:
-  group: "pages"
+  group: pages
   cancel-in-progress: true
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      NODE_ENV: development
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
           node-version: 20
           cache: npm
-      #- run: npm install          # keep this unless you commit package-lock.json
-      - run: npm run build
+      - run: npm ci --include=dev || npm install --include=dev
+      - run: chmod +x node_modules/.bin/* || true
+      - run: npx vite build
       - uses: actions/upload-pages-artifact@v3
         with:
-          path: ./dist
+          path: dist
 
   deploy:
     runs-on: ubuntu-latest
